Removed gson dependency
Edited how config, and maps files were written and read to remove gson
dependency. This allowed launch4j to be used.
Added BibleBook enum.
Added refresh option to logger and config.
Added more to searching - now creates the completed list of references
to search through.

--- a/MSE/src/mse/fxml/FXMLSearch.fxml
+++ b/MSE/src/mse/fxml/FXMLSearch.fxml
@@ -41,6 +41,7 @@
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem mnemonicParsing="false" onAction="#handlesViewLogFile" text="View Log File" />
                   <MenuItem mnemonicParsing="false" onAction="#handlesViewConfigFile" text="View Config File" />
+                  <MenuItem mnemonicParsing="false" onAction="#handlesRefreshLogAndConfig" text="Refresh Log and Config" />
                   <MenuItem mnemonicParsing="false" text="View Memory Usage" />
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem mnemonicParsing="false" text="About Search Engine" />
