--- a/MSE/src/main/resources/com/zerompurdy/mse/FXMLSearch.fxml
+++ b/MSE/src/main/resources/com/zerompurdy/mse/FXMLSearch.fxml
@@ -5,116 +5,116 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mse.controllers.FXMLSearchController">
-   <children>
-      <MenuBar>
-        <menus>
-          <Menu mnemonicParsing="false" text="File">
-            <items>
-                  <MenuItem mnemonicParsing="false" onAction="#handlesPreviousSearches" text="Previous Searches" />
-                  <MenuItem mnemonicParsing="false" onAction="#handlesExit" text="Exit" />
-            </items>
-          </Menu>
-          <Menu fx:id="booksMenu" mnemonicParsing="false" text="Books" />
-          <Menu fx:id="scopeMenu" mnemonicParsing="false" text="Search Type" />
-            <Menu fx:id="mapsMenu" mnemonicParsing="false" text="Maps" />
-            <Menu mnemonicParsing="false" text="Advanced">
-               <items>
-                  <Menu fx:id="logLevelMenu" mnemonicParsing="false" text="Set Log Level" />
-                  <MenuItem mnemonicParsing="false" onAction="#handlesViewLogFile" text="View Log File" />
-                  <MenuItem mnemonicParsing="false" onAction="#handlesViewConfigFile" text="View Config File" />
-                  <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem mnemonicParsing="false" onAction="#handlesRefreshLog" text="Refresh Log" />
-                  <MenuItem mnemonicParsing="false" onAction="#handlesRefreshConfig" text="Refresh Config" />
-                  <MenuItem mnemonicParsing="false" onAction="#handlesRefreshPreviousSearches" text="Refresh Previous Searches" />
-               </items>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Help">
-              <items>
-                <MenuItem mnemonicParsing="false" onAction="#handlesSearchEngineHelp" text="Search Engine Help" />
-                  <MenuItem mnemonicParsing="false" onAction="#handlesContactSupport" text="Contact Support" />
-                  <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem mnemonicParsing="false" onAction="#handlesViewLabourers" text="View Labourers" />
-                  <MenuItem mnemonicParsing="false" onAction="#handlesAboutSearchEngine" text="About Search Engine" />
-              </items>
-            </Menu>
-        </menus>
-      </MenuBar>
-      <HBox VBox.vgrow="NEVER">
-         <VBox.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </VBox.margin>
-         <children>
-            <VBox fx:id="searchBoxes" spacing="10.0" HBox.hgrow="ALWAYS">
-               <children>
-                  <TextField fx:id="searchBox" minHeight="27.0" minWidth="-Infinity" onAction="#handlesSearch" prefWidth="320.0" VBox.vgrow="NEVER">
-                     <VBox.margin>
-                        <Insets />
-                     </VBox.margin>
-                  </TextField>
-               </children>
-               <HBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </HBox.margin>
-            </VBox>
-            <Button mnemonicParsing="false" onAction="#handlesSearch" text="Search">
-               <HBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </HBox.margin>
-            </Button>
-            <Button fx:id="refineButton" mnemonicParsing="false" onAction="#handlesRefine" text="Refine">
-               <HBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </HBox.margin>
-            </Button>
-         </children>
-      </HBox>
-      <VBox VBox.vgrow="NEVER">
-         <children>
-            <Label fx:id="progressLabel" alignment="TOP_LEFT" text="Progress" VBox.vgrow="NEVER">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="20.0" right="10.0" top="5.0" />
-               </VBox.margin>
-            </Label>
-            <ProgressBar fx:id="progressBar" prefWidth="480.0" progress="0.0" VBox.vgrow="ALWAYS">
-               <VBox.margin>
-                  <Insets left="20.0" right="20.0" top="10.0" />
-               </VBox.margin>
-            </ProgressBar>
-         </children>
-      </VBox>
-      <GridPane fx:id="checkBoxPane" alignment="CENTER" VBox.vgrow="ALWAYS">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <VBox.margin>
-            <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-         </VBox.margin>
-      </GridPane>
-      <GridPane>
-         <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-         </columnConstraints>
-         <rowConstraints>
-            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-         </rowConstraints>
-         <children>
-            <Button alignment="CENTER" mnemonicParsing="false" onAction="#handlesSelectAll" text="All" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
-               <GridPane.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-               </GridPane.margin>
-            </Button>
-         </children>
-      </GridPane>
-   </children>
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zerompurdy.mse.controllers.FXMLSearchController">
+    <children>
+        <MenuBar>
+            <menus>
+                <Menu mnemonicParsing="false" text="File">
+                    <items>
+                        <MenuItem mnemonicParsing="false" onAction="#handlesPreviousSearches" text="Previous Searches" />
+                        <MenuItem mnemonicParsing="false" onAction="#handlesExit" text="Exit" />
+                    </items>
+                </Menu>
+                <Menu fx:id="booksMenu" mnemonicParsing="false" text="Books" />
+                <Menu fx:id="scopeMenu" mnemonicParsing="false" text="Search Type" />
+                <Menu fx:id="mapsMenu" mnemonicParsing="false" text="Maps" />
+                <Menu mnemonicParsing="false" text="Advanced">
+                    <items>
+                        <Menu fx:id="logLevelMenu" mnemonicParsing="false" text="Set Log Level" />
+                        <MenuItem mnemonicParsing="false" onAction="#handlesViewLogFile" text="View Log File" />
+                        <MenuItem mnemonicParsing="false" onAction="#handlesViewConfigFile" text="View Config File" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" onAction="#handlesRefreshLog" text="Refresh Log" />
+                        <MenuItem mnemonicParsing="false" onAction="#handlesRefreshConfig" text="Refresh Config" />
+                        <MenuItem mnemonicParsing="false" onAction="#handlesRefreshPreviousSearches" text="Refresh Previous Searches" />
+                    </items>
+                </Menu>
+                <Menu mnemonicParsing="false" text="Help">
+                    <items>
+                        <MenuItem mnemonicParsing="false" onAction="#handlesSearchEngineHelp" text="Search Engine Help" />
+                        <MenuItem mnemonicParsing="false" onAction="#handlesContactSupport" text="Contact Support" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" onAction="#handlesViewLabourers" text="View Labourers" />
+                        <MenuItem mnemonicParsing="false" onAction="#handlesAboutSearchEngine" text="About Search Engine" />
+                    </items>
+                </Menu>
+            </menus>
+        </MenuBar>
+        <HBox VBox.vgrow="NEVER">
+            <VBox.margin>
+                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+            </VBox.margin>
+            <children>
+                <VBox fx:id="searchBoxes" spacing="10.0" HBox.hgrow="ALWAYS">
+                    <children>
+                        <TextField fx:id="searchBox" minHeight="27.0" minWidth="-Infinity" onAction="#handlesSearch" prefWidth="320.0" VBox.vgrow="NEVER">
+                            <VBox.margin>
+                                <Insets />
+                            </VBox.margin>
+                        </TextField>
+                    </children>
+                    <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                    </HBox.margin>
+                </VBox>
+                <Button mnemonicParsing="false" onAction="#handlesSearch" text="Search">
+                    <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                    </HBox.margin>
+                </Button>
+                <Button fx:id="refineButton" mnemonicParsing="false" onAction="#handlesRefine" text="Refine">
+                    <HBox.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                    </HBox.margin>
+                </Button>
+            </children>
+        </HBox>
+        <VBox VBox.vgrow="NEVER">
+            <children>
+                <Label fx:id="progressLabel" alignment="TOP_LEFT" text="Progress" VBox.vgrow="NEVER">
+                    <VBox.margin>
+                        <Insets bottom="10.0" left="20.0" right="10.0" top="5.0" />
+                    </VBox.margin>
+                </Label>
+                <ProgressBar fx:id="progressBar" prefWidth="480.0" progress="0.0" VBox.vgrow="ALWAYS">
+                    <VBox.margin>
+                        <Insets left="20.0" right="20.0" top="10.0" />
+                    </VBox.margin>
+                </ProgressBar>
+            </children>
+        </VBox>
+        <GridPane fx:id="checkBoxPane" alignment="CENTER" VBox.vgrow="ALWAYS">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <VBox.margin>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </VBox.margin>
+        </GridPane>
+        <GridPane>
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <Button alignment="CENTER" mnemonicParsing="false" onAction="#handlesSelectAll" text="All" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                    <GridPane.margin>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                    </GridPane.margin>
+                </Button>
+            </children>
+        </GridPane>
+    </children>
 </VBox>
